test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-oknil-unmanaged.good
init-var-nonnil-owned-from-oknil-unmanaged.chpl:9: error: invalid copy-initialization
init-var-nonnil-owned-from-oknil-unmanaged.chpl:9: error: Cannot initialize 'owned MyClass' from a 'unmanaged MyClass?'
